syntax = "proto3";

option go_package = "./;proto";
package Hello;

service HelloService{
  rpc Hello(CheckResultReq) returns (CheckResultResp);
  rpc Hello2(CheckResultReq) returns (CheckResultResp);
}

message CheckResultReq{
  string hello_string=1;
}

message CheckResultResp{
  string response_code = 1; //操作结果，1成功，0失败
}

